--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "keywords": ["parser", "laravel"],
     "homepage": "https://github.com/pazuzu156/kparser",
     "type": "library",
-    "license": "MIT",
+    "license": "GPL",
     "authors": [
         {
             "name": "Kaleb Klein",
