--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,15 @@
             "homepage": "http://www.kalebklein.com"
         }
     ],
+    "repositories": [
+        {
+            "url": "https://github.com/pazuzu156/geshi-1.0",
+            "type": "git"
+        }
+    ],
     "require": {
         "php": ">=5.3.0",
-        "geshi/geshi": "dev-master"
+        "geshi/geshi-10": "dev-master"
     },
     "autoload": {
         "psr-0": {"Pazuzu156\\KParser": "src/"}
