--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "geshi/geshi-10": "dev-master"
+        "geshi/geshi": "dev-master"
     },
     "autoload": {
         "psr-0": {"Pazuzu156\\KParser": "src/"}
