--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,9 @@
         "php": ">=5.3.0",
         "geshi/geshi": "dev-master"
     },
+    "require-dev": {
+        "phpunit/phpunit": "5.0.*"
+    },
     "autoload": {
         "psr-0": {"Pazuzu156\\KParser": "src/"}
     },
