--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "geshi/geshi": "dev-master"
+        "geshi/geshi": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "5.0.*"
