--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "keywords": ["parser", "laravel"],
     "homepage": "http://pazuzu156.github.io/KParser",
     "type": "library",
-    "license": "GPL",
+    "license": "GPL-2.0-only",
     "authors": [
         {
             "name": "Kaleb Klein",
